Building config objects with schema validation to ensure feedback if user has bad configuration file
Config now passed into engine rather than loaded there

--- a/config.tmpl.yaml
+++ b/config.tmpl.yaml
@@ -2,3 +2,4 @@
 token: <twitch token>
 workers: <number of concurrent workers to process events>
 nickname: <channel nickname>
+channel: <name of your channel>
